--- a/index.html
+++ b/index.html
@@ -29,16 +29,24 @@
       <main>
         <div class="form-container">
           <h2>Crie seu convite</h2>
-          <form action="">
-            <fieldset class="event-details">
+          <form action="" class="grid">
+            <fieldset class="event-details grid">
               <legend>
-                <img src="" alt="" />
+                <img
+                  src="assets/icons/calendar.svg"
+                  alt="Ícone de calendário"
+                />
                 Sobre o evento
               </legend>
 
               <div class="input-wrapper">
                 <label for="event_name">Título</label>
-                <input type="text" name="event_name" id="event_name" />
+                <input
+                  type="text"
+                  name="event_name"
+                  id="event_name"
+                  placeholder="Nome do evento"
+                />
               </div>
 
               <div class="input-pair">
@@ -63,24 +71,68 @@
 
               <div class="input-pair">
                 <div class="input-wrapper">
-                  <label for="event_type">Tipo</label>
-                  <div class="radio-wrapper">
-                    <div class="radio-image"></div>
-                    <input
-                      type="radio"
-                      name="event_type"
-                      id="event_type_in_person"
-                      value="in-person"
-                    />
-                  </div>
-                  <div class="radio-wrapper">
-                    <div class="radio-image"></div>
-                    <input
-                      type="radio"
-                      name="event_type"
-                      id="event_type_online"
-                      value="online"
-                    />
+                  <label>Tipo</label>
+
+                  <div class="radio-pair">
+                    <div class="radio-wrapper">
+                      <label for="event_type_in_person">
+                        <svg
+                          width="16"
+                          height="16"
+                          viewBox="0 0 16 16"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <g clip-path="url(#clip0_4119_206)">
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M5.33337 1.83331C5.11236 1.83331 4.9004 1.92111 4.74412 2.07739C4.58784 2.23367 4.50004 2.44563 4.50004 2.66665V14.1666H11.5V2.66665C11.5 2.44563 11.4122 2.23367 11.256 2.07739C11.0997 1.92111 10.8877 1.83331 10.6667 1.83331H5.33337ZM12.5 5.49998V2.66665C12.5 2.18042 12.3069 1.7141 11.9631 1.37028C11.6193 1.02647 11.1529 0.833313 10.6667 0.833313H5.33337C4.84714 0.833313 4.38083 1.02647 4.03701 1.37028C3.69319 1.7141 3.50004 2.18042 3.50004 2.66665V7.49998H2.66671C2.18048 7.49998 1.71416 7.69313 1.37034 8.03695C1.02653 8.38077 0.833374 8.84708 0.833374 9.33331V13.3333C0.833374 13.8195 1.02653 14.2859 1.37034 14.6297C1.71416 14.9735 2.18048 15.1666 2.66671 15.1666H13.3334C13.8196 15.1666 14.2859 14.9735 14.6297 14.6297C14.9736 14.2859 15.1667 13.8195 15.1667 13.3333V7.33331C15.1667 6.84708 14.9736 6.38077 14.6297 6.03695C14.2859 5.69313 13.8196 5.49998 13.3334 5.49998H12.5ZM12.5 6.49998V14.1666H13.3334C13.5544 14.1666 13.7663 14.0788 13.9226 13.9226C14.0789 13.7663 14.1667 13.5543 14.1667 13.3333V7.33331C14.1667 7.1123 14.0789 6.90034 13.9226 6.74406C13.7663 6.58778 13.5544 6.49998 13.3334 6.49998H12.5ZM3.50004 8.49998H2.66671C2.44569 8.49998 2.23373 8.58778 2.07745 8.74406C1.92117 8.90034 1.83337 9.1123 1.83337 9.33331V13.3333C1.83337 13.5543 1.92117 13.7663 2.07745 13.9226C2.23373 14.0788 2.44569 14.1666 2.66671 14.1666H3.50004V8.49998ZM6.16671 3.99998C6.16671 3.72384 6.39056 3.49998 6.66671 3.49998H9.33337C9.60952 3.49998 9.83337 3.72384 9.83337 3.99998C9.83337 4.27612 9.60952 4.49998 9.33337 4.49998H6.66671C6.39056 4.49998 6.16671 4.27612 6.16671 3.99998ZM6.16671 6.66665C6.16671 6.3905 6.39056 6.16665 6.66671 6.16665H9.33337C9.60952 6.16665 9.83337 6.3905 9.83337 6.66665C9.83337 6.94279 9.60952 7.16665 9.33337 7.16665H6.66671C6.39056 7.16665 6.16671 6.94279 6.16671 6.66665ZM6.16671 9.33331C6.16671 9.05717 6.39056 8.83331 6.66671 8.83331H9.33337C9.60952 8.83331 9.83337 9.05717 9.83337 9.33331C9.83337 9.60945 9.60952 9.83331 9.33337 9.83331H6.66671C6.39056 9.83331 6.16671 9.60945 6.16671 9.33331ZM6.16671 12C6.16671 11.7238 6.39056 11.5 6.66671 11.5H9.33337C9.60952 11.5 9.83337 11.7238 9.83337 12C9.83337 12.2761 9.60952 12.5 9.33337 12.5H6.66671C6.39056 12.5 6.16671 12.2761 6.16671 12Z"
+                              fill="#59B2FF"
+                            />
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_4119_206">
+                              <rect width="16" height="16" fill="white" />
+                            </clipPath>
+                          </defs>
+                        </svg>
+
+                        Presencial
+                      </label>
+                      <input
+                        type="radio"
+                        name="event_type"
+                        id="event_type_in_person"
+                        value="in-person"
+                      />
+                    </div>
+
+                    <div class="radio-wrapper">
+                      <label for="event_type_online">
+                        <svg
+                          width="16"
+                          height="16"
+                          viewBox="0 0 16 16"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M2.66671 4.5C2.20647 4.5 1.83337 4.8731 1.83337 5.33333V10.6667C1.83337 11.1269 2.20647 11.5 2.66671 11.5H9.33337C9.79361 11.5 10.1667 11.1269 10.1667 10.6667V8.6735C10.1666 8.66864 10.1666 8.66378 10.1667 8.65892V7.00949C10.1666 7.00347 10.1666 6.99746 10.1667 6.99145V5.33333C10.1667 4.8731 9.79361 4.5 9.33337 4.5H2.66671ZM11.1667 6.12939V5.33333C11.1667 4.32081 10.3459 3.5 9.33337 3.5H2.66671C1.65419 3.5 0.833374 4.32081 0.833374 5.33333V10.6667C0.833374 11.6792 1.65419 12.5 2.66671 12.5H9.33337C10.3459 12.5 11.1667 11.6792 11.1667 10.6667V9.60093L13.8717 11.4043C13.9972 11.4878 14.143 11.5357 14.2936 11.5429C14.4441 11.5501 14.5938 11.5163 14.7267 11.4452C14.8596 11.374 14.9707 11.2682 15.0482 11.1389C15.1257 11.0096 15.1666 10.8617 15.1667 10.7109V5.24681C15.1667 5.24677 15.1667 5.24686 15.1667 5.24681C15.1667 5.10024 15.1281 4.9561 15.0547 4.82923C14.9812 4.70231 14.8756 4.59702 14.7485 4.52398C14.6213 4.45094 14.4772 4.41274 14.3305 4.41324C14.1839 4.41374 14.04 4.45291 13.9134 4.52681L11.1667 6.12939ZM11.1667 7.28715V8.39908L14.1667 10.3991V5.53677L11.1667 7.28715Z"
+                            fill="#869198"
+                          />
+                        </svg>
+                        Online
+                      </label>
+                      <input
+                        type="radio"
+                        name="event_type"
+                        id="event_type_online"
+                        value="online"
+                      />
+                    </div>
                   </div>
                 </div>
 
@@ -90,16 +142,113 @@
                     type="text"
                     name="event_location"
                     id="event_location"
+                    placeholder="Link ou endereço"
                   />
                 </div>
               </div>
 
               <div class="textarea-wrapper">
-                <label for=""></label>
-                <textarea name="" id=""></textarea>
+                <label for="event_description">Descrição</label>
+                <textarea
+                  name="event_description"
+                  id="event_description"
+                  placeholder="Escreva sobre os detalhes do evento"
+                ></textarea>
               </div>
             </fieldset>
-            
+
+            <fieldset class="event-customization">
+              <legend>
+                <img src="" alt="" />
+                Personalização
+              </legend>
+
+              <div class="colors-picker">
+                <label>Cor principal</label>
+
+                <div class="colors-wrapper">
+                  <div class="color1"></div>
+                  <input type="radio" name="colors" id="color1" value="blue" />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color2"></div>
+                  <input type="radio" name="colors" id="color2" value="navy" />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color3"></div>
+                  <input
+                    type="radio"
+                    name="colors"
+                    id="color3"
+                    value="purple"
+                  />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color4"></div>
+                  <input
+                    type="radio"
+                    name="colors"
+                    id="color4"
+                    value="fuschia"
+                  />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color5"></div>
+                  <input type="radio" name="colors" id="color5" value="pink" />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color6"></div>
+                  <input type="radio" name="colors" id="color6" value="red" />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color7"></div>
+                  <input
+                    type="radio"
+                    name="colors"
+                    id="color7"
+                    value="orange"
+                  />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color8"></div>
+                  <input
+                    type="radio"
+                    name="colors"
+                    id="color8"
+                    value="yellow"
+                  />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color9"></div>
+                  <input type="radio" name="colors" id="color9" value="lime" />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color10"></div>
+                  <input
+                    type="radio"
+                    name="colors"
+                    id="color10"
+                    value="green"
+                  />
+                </div>
+
+                <div class="colors-wrapper">
+                  <div class="color11"></div>
+                  <input type="radio" name="colors" id="color11" value="cyan" />
+                </div>
+              </div>
+
+              <div class="theme-picker"></div>
+            </fieldset>
           </form>
         </div>
       </main>
