concluído o switch toggle para escolha do estilo do evento, sendo claro ou escuro

--- a/index.html
+++ b/index.html
@@ -263,7 +263,10 @@
                 <label for="">Tema do evento</label>
                 <div class="theme-wrapper grid">
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image.png" alt="Imagem de um bolo de aniversário" />
+                    <img
+                      src="assets/images/Image.png"
+                      alt="Imagem de um bolo de aniversário"
+                    />
                     <label for="theme1">Aniversário</label>
                     <input
                       type="radio"
@@ -274,7 +277,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-1.png" alt="Imagem com decorações de festa infantil" />
+                    <img
+                      src="assets/images/Image-1.png"
+                      alt="Imagem com decorações de festa infantil"
+                    />
                     <label for="theme2">Infantil</label>
                     <input
                       type="radio"
@@ -285,7 +291,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-2.png" alt="Imagem de um capelo" />
+                    <img
+                      src="assets/images/Image-2.png"
+                      alt="Imagem de um capelo"
+                    />
                     <label for="theme3">Formatura</label>
                     <input
                       type="radio"
@@ -296,7 +305,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-3.png" alt="Imagem de alianças de casamento" />
+                    <img
+                      src="assets/images/Image-3.png"
+                      alt="Imagem de alianças de casamento"
+                    />
                     <label for="theme4">Casamento</label>
                     <input
                       type="radio"
@@ -307,7 +319,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-4.png" alt="Imagem de fraldas simbolizando chá de bebê" />
+                    <img
+                      src="assets/images/Image-4.png"
+                      alt="Imagem de fraldas simbolizando chá de bebê"
+                    />
                     <label for="theme5">Chá de bebê</label>
                     <input
                       type="radio"
@@ -318,7 +333,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-5.png" alt="Imagem de uma cozinha" />
+                    <img
+                      src="assets/images/Image-5.png"
+                      alt="Imagem de uma cozinha"
+                    />
                     <label for="theme6">Chá de panela</label>
                     <input
                       type="radio"
@@ -329,7 +347,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-6.png" alt="Imagem de laços coloridos" />
+                    <img
+                      src="assets/images/Image-6.png"
+                      alt="Imagem de laços coloridos"
+                    />
                     <label for="theme7">Carnaval</label>
                     <input
                       type="radio"
@@ -340,7 +361,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-7.png" alt="Imagem de um ovo de páscoa" />
+                    <img
+                      src="assets/images/Image-7.png"
+                      alt="Imagem de um ovo de páscoa"
+                    />
                     <label for="theme8">Páscoa</label>
                     <input
                       type="radio"
@@ -351,7 +375,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-8.png" alt="Imagem de bandeiras de São João" />
+                    <img
+                      src="assets/images/Image-8.png"
+                      alt="Imagem de bandeiras de São João"
+                    />
                     <label for="theme9">São João</label>
                     <input
                       type="radio"
@@ -362,7 +389,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-9.png" alt="Imagem de abóboras de halloween" />
+                    <img
+                      src="assets/images/Image-9.png"
+                      alt="Imagem de abóboras de halloween"
+                    />
                     <label for="theme10">Halloween</label>
                     <input
                       type="radio"
@@ -373,7 +403,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-10.png" alt="Imagem de presentes" />
+                    <img
+                      src="assets/images/Image-10.png"
+                      alt="Imagem de presentes"
+                    />
                     <label for="theme11">Natal</label>
                     <input
                       type="radio"
@@ -384,7 +417,10 @@
                   </div>
 
                   <div class="theme-picker grid">
-                    <img src="assets/images/Image-11.png" alt="Imagem de diversas pessoas brindando e/ou celebrando" />
+                    <img
+                      src="assets/images/Image-11.png"
+                      alt="Imagem de diversas pessoas brindando e/ou celebrando"
+                    />
                     <label for="theme12">Outro</label>
                     <input
                       type="radio"
@@ -394,6 +430,39 @@
                     />
                   </div>
                 </div>
+              </div>
+
+              <div class="input-pair">
+                <div class="event-style">
+                  <label>Estilo</label>
+                  <div class="event-style-group">
+                    <div class="event-style-wrapper">
+                      <div class="toggle-switch"></div>
+
+                      <div class="dark-mode">
+                        <input
+                          type="radio"
+                          name="mode"
+                          id="dark_mode"
+                          value="dark"
+                          checked
+                        />
+                      </div>
+                      <div class="light-mode">
+                        <input
+                          type="radio"
+                          name="mode"
+                          id="light_mode"
+                          value="light"
+                        />
+                      </div>
+                    </div>
+                    <label for="dark_mode">Escuro</label>
+                    <label for="light_mode">Claro</label>
+                  </div>
+                </div>
+
+                <div class="cover-image-upload"></div>
               </div>
             </fieldset>
           </form>
