resolvendo o caminho da logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="app" class="grid">
       <aside>
         <header class="grid">
-          <img src="/assets/logo.svg" alt="Emoji de confetes" />
+          <img src="assets/logo.svg" alt="Emoji de confetes" />
           <div class="grid">
             <h1>Festivite</h1>
             <p>Crie um convite digital para o seu evento</p>
